Fixed MainView disply on smaller screen
*When there was many lotteries added the height of each button
(lottery and addlottery) was too small and that cose problems in
displey MainView on mobile and small screens. Fix was to set min height
of button to 25%.

--- a/WhosYourSanta/wwwroot/css-santa/santa-MainView.css
+++ b/WhosYourSanta/wwwroot/css-santa/santa-MainView.css
@@ -86,6 +86,7 @@
 .lottery {
     width:100%;
     position:relative;
+    padding-top:1%;
 }
 
 .lottery-title {
@@ -209,6 +210,7 @@
     {
         height:50%;
         width:100%;
+        left:0;
     }
 
 
